style: correction gap et margin top .logements en version mobile

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -22,5 +22,7 @@
     padding: 0;
     margin-bottom: 27px;
     background-color: white;
+    gap: 20px;
+    margin-top: 22px;
   }
 }
